final project with gh-pages module

--- a/work.html
+++ b/work.html
@@ -87,7 +87,7 @@
                 </a>
             </div>
             <div class="item">
-                <a href="img/projects/gym.png"><img src="img/projects/gym.png" alt=""></a>
+                <a href="img/projects/hangmancr.png"><img src="img/projects/hangmancr.png" alt=""></a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i> View
                 </a>
