--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             Web Developer , Programmer , Network Admin.
         </h2>
         <div class="icons">
-           <a href="https://www.facebook.com/Th3Zahir">
+            <a href="https://www.facebook.com/Th3Zahir">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
-            <a href="#">
+            <a href="https://www.twitter.com/Soffi-Zahir">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
             <a href="https://github.com/Soffi-Zahir/">
