--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i> View
                 </a>
-                <a href="" class="btn-dark">
+                <a href="https://github.com/Soffi-Zahir/batch-move" class="btn-dark">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
@@ -91,7 +91,7 @@
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i> View
                 </a>
-                <a href="" class="btn-dark">
+                <a href="https://github.com/Soffi-Zahir/hangman" class="btn-dark">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
