--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="https://github.com/Soffi-Zahir/">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="resume/Soffi's Resume final02.pdf" class="btn">download cv <i class="fa fa-caret-down"></i></a>
+            <a href="resume/Soffi's Resume.pdf" class="btn">download cv <i class="fa fa-caret-down"></i></a>
         </div>
 
     </main>
