--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main id="home">
         <h1 class="lg-heading">I'm Soffi <span class="text-secondary">Zahir</span>.</h1>
         <h2 class="sm-heading">
-            Web Developer , Programmer , Network Admin.
+            Web Developer , Programmer , Pentester.
         </h2>
         <div class="icons">
             <a href="https://www.facebook.com/Th3Zahir">
@@ -66,7 +66,7 @@
             <a href="https://github.com/Soffi-Zahir/">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="resume/Soffi's Resume.pdf" class="btn">download cv <i class="fa fa-caret-down"></i></a>
+            <a href="Soffi's Resume final02.pdf.pdf" class="btn">download cv <i class="fa fa-caret-down"></i></a>
         </div>
 
     </main>
