--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                 <div class="text-secondary">
                     BIO
                 </div>
-                <p>My name is Soffi Zahir , i'm 25 old ,i have master degree in Networks and Embedded Systems.</p>
+                <p>My name is Soffi Zahir , i'm 27 old ,i have master degree in Networks and Embedded Systems.</p>
                 <p>I'm passionate by new technologies and web development</p>
 
             </div>
@@ -75,38 +75,38 @@
                 <h1> BIRTH DATE:</h1>
                 <p>25 Mai 1993</p>
                 <h1> JOB: </h1>
-                <p> Freelancer, Backend Developer </p>
+                <p> Freelancer, full stack web Developer </p>
                 <h1> WEBSITE:</h1>
                 <p> www.github.com </p>
                 <h1> EMAIL: </h1>
-                <p> soffizahir@gmail.com</p>
+                <p> soffizahir2016@gmail.com</p>
 
             </div>
             <div class="job job-1">
                 <ul class="skill-bars">
                     <li>
                         <div class="progress percent90"><span>90%</span></div>
-                        <i class="fab fa-html"></i><strong> HTML5</strong>
+                        <i class="fab fa-html"></i><strong> HTML5,CSS,JavaScript</strong>
                     </li>
                     <li>
                         <div class="progress percent65"><span>65%</span></div>
-                        <strong>CSS3</strong>
+                        <strong>Python</strong>
                     </li>
                     <li>
                         <div class="progress percent70"><span>70%</span></div>
                         <strong>JAVA</strong>
                     </li>
                     <li>
-                        <div class="progress percent65"><span>65%</span></div>
+                        <div class="progress percent70"><span>70%</span></div>
                         <strong>PHP</strong>
                     </li>
                     <li>
-                        <div class="progress percent45"><span>45%</span></div>
-                        <strong>Django</strong>
+                        <div class="progress percent45"><span>55%</span></div>
+                        <strong>Odoo ERP</strong>
                     </li>
                     <li>
                         <div class="progress percent85"><span>85%</span></div>
-                        <strong>Python</strong>
+                        <strong>Pentest tools</strong>
                     </li>
 
                 </ul>
