--- a/work.html
+++ b/work.html
@@ -104,6 +104,16 @@
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
+            
+             <div class="item">
+                <a href="img/projects/tasklist.PNG"><img src="img/projects/tasklist.PNG" alt=""></a>
+                <a href="" class="btn-light">
+                    <i class="fas fa-eye"></i> View
+                </a>
+                <a href="" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
 
         </div>
     </main>
