--- a/work.html
+++ b/work.html
@@ -106,7 +106,7 @@
             </div>
             
              <div class="item">
-                <a href="img/projects/tasklist.PNG"><img src="img/projects/tasklist.PNG" alt=""></a>
+                <a href="img/projects/tasklist.png"><img src="img/projects/tasklist.png" alt=""></a>
                 <a href="" class="btn-light">
                     <i class="fas fa-eye"></i> View
                 </a>
